--- a/GraphicsPractice/GraphicsPractice.vcxproj.filters
+++ b/GraphicsPractice/GraphicsPractice.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="Constants.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cube.h">
+      <Filter>Header Files\Objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\shaders\basic.frag">
