separated out all of the runtime shader logic into Shader class. All drawables should contain an instance of that class. Also added view and projection matrices to shader. Now able to control position and rotation of camera.

--- a/GraphicsPractice/GraphicsPractice.vcxproj
+++ b/GraphicsPractice/GraphicsPractice.vcxproj
@@ -127,9 +127,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Drawable.cpp" />
-    <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="GLManager.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -138,6 +138,7 @@
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="EventManager.h" />
     <ClInclude Include="GLManager.h" />
+    <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="Triangle.h" />
