added a sphere object. set up for lighting lab

--- a/GraphicsPractice/GraphicsPractice.vcxproj.filters
+++ b/GraphicsPractice/GraphicsPractice.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Header Files\Objects">
       <UniqueIdentifier>{efb89c32-d7b3-4906-a5a7-f26a53307818}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Objects">
+      <UniqueIdentifier>{4a890bfa-6f0e-444e-b7b3-3b78a572d012}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -32,6 +35,9 @@
     </ClCompile>
     <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Sphere.cpp">
+      <Filter>Source Files\Objects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -61,6 +67,9 @@
     </ClInclude>
     <ClInclude Include="Shader.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Sphere.h">
+      <Filter>Header Files\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
