--- a/GraphicsPractice/GraphicsPractice.vcxproj
+++ b/GraphicsPractice/GraphicsPractice.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClCompile Include="Drawable.cpp" />
     <ClCompile Include="GLManager.cpp" />
+    <ClCompile Include="Lightsource.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
@@ -139,6 +140,7 @@
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="EventManager.h" />
     <ClInclude Include="GLManager.h" />
+    <ClInclude Include="Lightsource.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Sphere.h" />
@@ -148,6 +150,7 @@
   <ItemGroup>
     <None Include="..\shaders\basic.frag" />
     <None Include="..\shaders\basic.vert" />
+    <None Include="..\shaders\lightsource.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
