added a planet rotating around sun. planets can be generated procedurally now

--- a/GraphicsPractice/GraphicsPractice.vcxproj
+++ b/GraphicsPractice/GraphicsPractice.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="GLManager.cpp" />
     <ClCompile Include="Lightsource.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Planet.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="Sphere.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="EventManager.h" />
     <ClInclude Include="GLManager.h" />
     <ClInclude Include="Lightsource.h" />
+    <ClInclude Include="Planet.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Sphere.h" />
