--- a/GraphicsPractice/GraphicsPractice.vcxproj.filters
+++ b/GraphicsPractice/GraphicsPractice.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Lightsource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Planet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GLManager.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Lightsource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Planet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
